--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 黄粱地
+title: "*×* blog"
 subtitle:
-description: 是吧，看着骨相，生前必然是个双腿修长的角色佳人，埋骨于此，真是令人惋惜
-author: 一颗小白骨儿
+description: 
+author: hb
 language: zh-Hans
 timezone: Asia/Shanghai
 
